--- a/src/app/pages/landing/sections/gallery/styles.scss
+++ b/src/app/pages/landing/sections/gallery/styles.scss
@@ -97,6 +97,8 @@
           bottom: -30px;
 
           li {
+            margin: 0px 1px;
+
             button {
               &::before {
                 font-size: 11px;
