--- a/src/app/pages/landing/sections/location/styles.scss
+++ b/src/app/pages/landing/sections/location/styles.scss
@@ -70,6 +70,7 @@
 
     &.columns-mobile {
       display: none;
+      margin-bottom: 100px;
 
       @media (max-width: 480px) {
         display: block;
@@ -145,5 +146,16 @@
       width: 90%;
       height: 350px;
     }
+  }
+}
+
+.wrapper-map iframe {
+  display: block;
+  margin: 100px auto 0px auto;
+  width: 80%;
+
+  @media (max-width: 480px) {
+    width: 90%;
+    height: 400px;
   }
 }
